src/test/deca/test_compilateur/context/invalid/created/acces_field/acces_sur_int.deca
// Description :
//    acces à un field sur une variable int (qui n'est pas une classe)
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10 :(3.65) Le membre gauche n’est pas de type ‘classe’

{
int b = 3;
b.x;
}